GetAllUsers works! now to get the other two working...